--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
         <!-- main header -->
-        <header class="main-header header-style-one">
+        <header class="main-header header-style-three">
             <!-- header-lower -->
             <div class="header-lower">
                 <div class="auto-container">
@@ -164,20 +164,10 @@
 
         <!-- banner-section -->
         <section class="banner-section p_relative centred">
-            <div class="pattern-layer" style="background-color:white;"></div>
-            <div class="author-box">
-                <div class="author author-1"><img src="assets/images/resource/author-1.png" alt=""></div>
-                <div class="author author-2"><img src="assets/images/resource/author-2.png" alt=""></div>
-                <div class="author author-3"><img src="assets/images/resource/author-3.png" alt=""></div>
-                <div class="author author-4"><img src="assets/images/resource/author-4.png" alt=""></div>
-                <div class="author author-5"><img src="assets/images/resource/author-5.png" alt=""></div>
-                <div class="author author-6"><img src="assets/images/resource/author-6.png" alt=""></div>
-                <div class="author author-7"><img src="assets/images/resource/author-7.png" alt=""></div>
-
-            </div>
+            <div class="pattern-layer" style="background-image: url(assets/images/land2.gif);filter: brightness(0.7);"></div>
             <div class="auto-container">
                 <div class="content-box">
-                    <h2>Payout HR Software For <br>Today - Tomorrow:</h2>
+                    <h2>Payout HR Software <br>For Today - Tomorrow:</h2>
                     <p style="text-align: center;">Where Efficiency Meets Versatility!</p>
                     <div class="btn-box">
                         <a href="index.html" class="theme-btn btn-one mr_20"><span>Read More</span></a>
