--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
         <!-- main header -->
-        <header class="main-header header-style-three">
+        <header class="main-header header-style-two">
             <!-- header-lower -->
             <div class="header-lower">
                 <div class="auto-container">
@@ -162,23 +162,42 @@
          <!--End Mobile Menu -->
 
 
+
         <!-- banner-section -->
-        <section class="banner-section p_relative centred">
-            <div class="pattern-layer" style="background-image: url(assets/images/land2.gif);filter: brightness(0.7);"></div>
+        <section class="banner-section banner-style-three p_relative">
+            <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-10.png);"></div>
             <div class="auto-container">
-                <div class="content-box">
-                    <h2>Payout HR Software <br>For Today - Tomorrow:</h2>
-                    <p style="text-align: center;">Where Efficiency Meets Versatility!</p>
-                    <div class="btn-box">
-                        <a href="index.html" class="theme-btn btn-one mr_20"><span>Read More</span></a>
-                        <a href="index.html" class="theme-btn banner-btn">Get Demo</a>
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-12 col-sm-12 content-column">
+                        <div class="content-box">
+                            <h2><span>Payout</span> HR Software</h2>
+                            <h3>Empowering Your Workforce Today – Shaping Tomorrow's Success</h3>
+                            <p>Enhance efficiency and foster growth with cutting-edge digital solutions</p>
+                            <div class="btn-box">
+                                <a href="index.html" class="theme-btn btn-one mr_20"><span>Read More</span></a>
+                                <a href="index.html" class="theme-btn banner-btn">Get Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 image-column">
+                        <div class="image-inner">
+                            <div class="icon-logo"><img src="assets/images/22.png" alt=""></div>
+                            <div class="image-box mr_15">
+                                <figure class="image image-1 mb_15"><img src="assets/images/banner/banner-img-1.jpg" alt=""></figure>
+                                <figure class="image image-2"><img src="assets/images/banner/banner-img-2.jpg" alt=""></figure>
+                            </div>
+                            <div class="image-box pt_55">
+                                <figure class="image image-3 mb_15"><img src="assets/images/banner/banner-img-3.jpg" alt=""></figure>
+                                <figure class="image image-4"><img src="assets/images/banner/banner-img-4.jpg" alt=""></figure>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- banner-section end -->
 
-
+       
 
         <!-- about-section -->
         <section class="about-section pt_60 pb_60" id="aboutus">
