--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="header-lower">
                 <div class="auto-container">
                     <div class="outer-box">
-                        <a href="index.html"><img src="assets/images/logo.png" alt="" width="120"></a>
+                        <a href="index.html"><img src="assets/images/PAYOUT.png" alt="" width="120"></a>
                         <div class="menu-area">
                             <!--Mobile Navigation Toggler-->
                             <div class="mobile-nav-toggler">
@@ -126,7 +126,7 @@
             <div class="sticky-header pt-2 pb-2">
                 <div class="auto-container">
                     <div class="outer-box">
-                        <a href="index.html"><img src="assets/images/logo.png" alt="" width="120"></a>
+                        <a href="index.html"><img src="assets/images/PAYOUT.png" alt="" width="120"></a>
                         <div class="menu-area">
                             <nav class="main-menu clearfix">
                                 <!--Keep This Empty / Menu will come through Javascript-->
@@ -148,7 +148,7 @@
             <div class="menu-backdrop"></div>
             <div class="close-btn"><i class="fas fa-times"></i></div>
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="assets/images/logo-2.png" alt="" title=""  width="100"></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="assets/images/PAYOUT.png" alt="" title=""  width="100"></a></div>
                 <div class="menu-outer"></div>
                 <div class="social-links">
                     <ul class="clearfix">
@@ -694,7 +694,7 @@
                     <div class="row clearfix">
                         <div class="col-lg-3 col-md-6 col-sm-6 footer-column">
                             <div class="footer-widget logo-widget mr_30">
-                                <figure class="footer-logo mb_20"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>                            
+                                <figure class="footer-logo mb_20"><a href="index.html"><img src="assets/images/PAYOUT.png" alt="" width="120"></a></figure>                            
                             </div>
                             <ul class="social-links">
                                 <li><a href="index.html"><i class="fab fa-instagram"></i></a></li>
