--- a/privacy.html
+++ b/privacy.html
@@ -82,12 +82,12 @@
 
 
         <!-- main header -->
-        <header class="main-header header-style-one">
+        <header class="main-header header-style-two">
             <!-- header-lower -->
             <div class="header-lower">
                 <div class="auto-container">
                     <div class="outer-box">
-                        <figure class="logo-box pl_15"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                        <figure class="logo-box pl_15"><a href="index.html"><img src="assets/images/PAYOUT.png" alt="" width="120"></a></figure>
                         <div class="menu-area">
                             <!--Mobile Navigation Toggler-->
                             <div class="mobile-nav-toggler">
@@ -120,7 +120,7 @@
             <div class="sticky-header pt-2 pb-2">
                 <div class="auto-container">
                     <div class="outer-box">
-                        <figure class="logo-box pl_15"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                        <figure class="logo-box pl_15"><a href="index.html"><img src="assets/images/PAYOUT.png" alt="" width="120"></a></figure>
                         <div class="menu-area">
                             <nav class="main-menu clearfix">
                                 <!--Keep This Empty / Menu will come through Javascript-->
@@ -142,7 +142,7 @@
             <div class="menu-backdrop"></div>
             <div class="close-btn"><i class="fas fa-times"></i></div>
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="assets/images/logo-2.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="assets/images/PAYOUT.png" alt="" title="" width="100"></a></div>
                 <div class="menu-outer"></div>
                 <div class="social-links">
                     <ul class="clearfix">
@@ -156,7 +156,7 @@
          <!--End Mobile Menu -->
 
              <!-- job-details -->
-        <section class="job-details mt-5 pt_110 pb_120">
+        <section class="job-details  pt_60 pb_120">
             <div class="auto-container">
                 <div class="sec-title centred pb_60 sec-title-animation animation-style2">
                     <span class="sub-title mb_10 mt-3 title-animation">Privacy Policy</span>
@@ -236,7 +236,7 @@
                     <div class="row clearfix">
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget logo-widget mr_30">
-                                <figure class="footer-logo mb_20"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>                            
+                                <figure class="footer-logo mb_20"><a href="index.html"><img src="assets/images/PAYOUT.png" alt="" width="120"></a></figure>                            
                             </div>
                             <ul class="social-links">
                                 <li><a href="index.html"><i class="fab fa-instagram"></i></a></li>
