--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- Header area start -->
     <header>
-        <div id="header-sticky" class="header__area header-1 gray-bg">
+        <div id="header-sticky" class="header__area header-1 ">
             <div class="header-container">
                 <div class="mega__menu-wrapper p-relative">
                     <div class="header__main">
